# ICS5110

./: CategoricalNaiveBayes.py  DecisionTree.py  MachineTeacher.ipynb  PreliminaryDataAnalysis.ipynb  README.md  README.txt  SupportVectorMachines.py  pyproject.toml
project/: test.py
project/data/: test.py
